[BUG-1664] Resolve Meshery logo spacing and alignment issue
Remove extra margin, padding, and add align-items property.

--- a/_sass/navigation.scss
+++ b/_sass/navigation.scss
@@ -21,6 +21,7 @@ nav {
 	display: flex;
 	flex-direction: row;
 	padding: 0 2vw;
+	align-items: center;
 	justify-content: space-between;
 }
 .stellarnav.desktop{
@@ -118,14 +119,10 @@ a.nav-text:hover {
 			border-top: 6px solid;
 		}
 	}
-	&:hover{
-	}
 }
-
 
 .stellarnav ul {
 	width:fit-content;
-	margin-top: 0.5rem;
 	& ul{
   	border-radius: 5px;
 	background-color: var(--color-secondary-light);
@@ -270,16 +267,4 @@ a.nav-text:hover {
 		gap: 5px;
 	}
 	
-}
-
-@media screen and (max-width: 1140px)  {
-	.project-name {
-		padding-top: 10px;
-	}
-}
-
-@media screen and (max-width: 839px) {
-    .nav-mode-icon {
-        padding-top: 10px;
-    }
 }
